--- a/contact.html
+++ b/contact.html
@@ -3,19 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>My Contact Information</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body>
+
+  <body><center>
+    <br><br><br><br><br><br>
     <h1>My Contact Information</h1>
-    <ol>
-         <li>Phone  Number : 8778898004</li>
-         <li>Email ID : <a href="mailto:www.google.com">askerparvez27@gmail.com</a> </li>
+
+        <p> Phone  Number : 8778898004
+          <br>
+         Email ID : <a href="mailto:www.google.com">askerparvez27@gmail.com</a> </p>
 
 
-    </ol>
+
     <br>
         <form  action="mailto:askerparvez27@gmail.com" method="post" enctype="text/plain">
           <label>Your Name :</label>
-          <input type="text" name="Name" value="">
+          <input type="text" name="Name" value="" >
           <br>
           <br>
 
@@ -24,13 +28,14 @@
           <input type="email" name="Email" value="">
           <br><br>
           <label>Type Any Message</label>
-          <br>
-        <textarea name="Message " rows="5" cols="50"></textarea>
           <br><br>
-          <input type="submit" name="" value="Submit">
+        <textarea name="Message " rows="5" cols="50"  ></textarea>
+          <br><br>
+          <input type="submit" name="" value="Submit" >
 
 
         </form>
-
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</center>
   </body>
 </html>
