--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta charset="utf-8">
     <title>🅰Asker's Personal Website</title>
   </head>
+  <link rel="stylesheet" href="css/styles.css">
+
+
 
   <body>
     <br>
     <table cellspacing="20">
       <tr>
-        <td>  <img src="asker.jpg" alt="This is My profile picture"height="200"  width="160"
+        <td>  <img src="asker1.jpg" alt="This is My profile picture"height="200"  width="160"
           ></td>
           <td>  <h1>
               <b> A.Asker Parvez</b>
@@ -62,7 +65,7 @@
 
   <body>
             <h3>My Favourite webseries</h3>
-          <table>
+          <table cellspacing="9" >
 
               <thead>
                 <th>S.NO</th>
