--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
         <p> Phone  Number : 8778898004
           <br>
-         Email ID : <a href="mailto:www.google.com">askerparvez27@gmail.com</a> </p>
+         Email ID : <a href="mailto:askerparvez27@gmail.com">askerparvez27@gmail.com</a> </p>
 
 
 
